# renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  glad.cpp  interface_renderer.hpp  linux_renderer.cpp  linux_renderer.hpp  main.cpp  main.hpp  renderer.cpp  renderer.hpp  windows_renderer.cpp  windows_renderer.hpp
tests/: CMakeLists.txt  test.cpp
